# rsiot-devices

./: Cargo.toml
examples/aht10/: main.rs
examples/xpt2046_rpi/: main.rs
src/i2c/: mod.rs
src/i2c/aht10/: buffer.rs  device.rs  mod.rs  request_kind.rs
src/spi/: mod.rs
src/spi/xpt2046/: mod.rs
